--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "zendframework/zend-mvc": "^2.5"
   },
   "require-dev" : {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^4.8",
+    "squizlabs/php_codesniffer": "^2.3"
   },
   "autoload": {
     "psr-4": {
@@ -25,5 +26,14 @@
     "psr-4": {
       "T4web\\MigrationsTest\\": "tests/"
     }
+  },
+  "scripts": {
+    "check": [
+      "@cs",
+      "@test"
+    ],
+    "cs": "phpcs",
+    "cs-fix": "phpcbf",
+    "test": "phpunit --colors=always"
   }
 }
