--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "zendframework/zend-modulemanager": "^2.5",
     "zendframework/zend-servicemanager": "^2.5",
     "zendframework/zend-console": "^2.5",
-    "zendframework/zend-mvc": "^2.5"
+    "zendframework/zend-mvc": "^2.5",
+
+    "t4web/filesystem": "1.0.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "^4.8",
