add zend-db + test composer events

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   "require": {
     "php": ">=5.5",
 
+    "zendframework/zend-db": "^2.5",
     "zendframework/zend-modulemanager": "^2.5",
     "zendframework/zend-servicemanager": "^2.5",
     "zendframework/zend-console": "^2.5",
