test composer events

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,12 @@
     }
   },
   "scripts": {
+    "post-package-install": [
+      "T4web\\Migrations\\Module::postPackageInstall"
+    ],
+    "post-install-cmd": [
+      "T4web\\Migrations\\Module::postInstall"
+    ],
     "check": [
       "@cs",
       "@test"
