--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "zendframework/zend-servicemanager": "^2.5",
     "zendframework/zend-console": "^2.5",
     "zendframework/zend-mvc": "^2.5",
+    "zendframework/zend-text": "^2.5",
 
     "t4web/filesystem": "1.0.0"
   },
